backend backup/hello_world/build/log/idf_py_stdout_output_29809
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/conanpan/esp/hello_world/build/bootloader/esp-idf/esptool_py && /Users/conanpan/.espressif/python_env/idf5.5_py3.10_env/bin/python /Users/conanpan/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/conanpan/esp/hello_world/build/bootloader/bootloader.bin
Bootloader binary size 0x52b0 bytes. 0x2d50 bytes (35%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj 
/Users/conanpan/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-2290-g94cfe394fe\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/conanpan/esp/hello_world/build/config -I/Users/conanpan/esp/hello_world/main -I/Users/conanpan/esp/esp-idf/components/newlib/platform_include -I/Users/conanpan/esp/esp-idf/components/freertos/config/include -I/Users/conanpan/esp/esp-idf/components/freertos/config/include/freertos -I/Users/conanpan/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/conanpan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/conanpan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/conanpan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/conanpan/esp/esp-idf/components/freertos/esp_additions/include -I/Users/conanpan/esp/esp-idf/components/esp_hw_support/include -I/Users/conanpan/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/conanpan/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/conanpan/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/conanpan/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/conanpan/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/conanpan/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/conanpan/esp/esp-idf/components/esp_hw_support/power_supply/include -I/Users/conanpan/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/conanpan/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/conanpan/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/Users/conanpan/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/Users/conanpan/esp/esp-idf/components/heap/include -I/Users/conanpan/esp/esp-idf/components/heap/tlsf -I/Users/conanpan/esp/esp-idf/components/log/include -I/Users/conanpan/esp/esp-idf/components/soc/include -I/Users/conanpan/esp/esp-idf/components/soc/esp32s3 -I/Users/conanpan/esp/esp-idf/components/soc/esp32s3/include -I/Users/conanpan/esp/esp-idf/components/soc/esp32s3/register -I/Users/conanpan/esp/esp-idf/components/hal/platform_port/include -I/Users/conanpan/esp/esp-idf/components/hal/esp32s3/include -I/Users/conanpan/esp/esp-idf/components/hal/include -I/Users/conanpan/esp/esp-idf/components/esp_rom/include -I/Users/conanpan/esp/esp-idf/components/esp_rom/esp32s3/include -I/Users/conanpan/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/conanpan/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/conanpan/esp/esp-idf/components/esp_common/include -I/Users/conanpan/esp/esp-idf/components/esp_system/include -I/Users/conanpan/esp/esp-idf/components/esp_system/port/soc -I/Users/conanpan/esp/esp-idf/components/esp_system/port/include/private -I/Users/conanpan/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/conanpan/esp/esp-idf/components/xtensa/include -I/Users/conanpan/esp/esp-idf/components/xtensa/deprecated_include -I/Users/conanpan/esp/esp-idf/components/lwip/include -I/Users/conanpan/esp/esp-idf/components/lwip/include/apps -I/Users/conanpan/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/conanpan/esp/esp-idf/components/lwip/lwip/src/include -I/Users/conanpan/esp/esp-idf/components/lwip/port/include -I/Users/conanpan/esp/esp-idf/components/lwip/port/freertos/include -I/Users/conanpan/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/conanpan/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/conanpan/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/conanpan/esp/esp-idf/components/esp_http_client/include -I/Users/conanpan/esp/esp-idf/components/esp_event/include -I/Users/conanpan/esp/esp-idf/components/nvs_flash/include -I/Users/conanpan/esp/esp-idf/components/esp_partition/include -I/Users/conanpan/esp/esp-idf/components/esp_wifi/include -I/Users/conanpan/esp/esp-idf/components/esp_wifi/include/local -I/Users/conanpan/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/conanpan/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/conanpan/esp/esp-idf/components/esp_phy/include -I/Users/conanpan/esp/esp-idf/components/esp_phy/esp32s3/include -I/Users/conanpan/esp/esp-idf/components/esp_netif/include -I/Users/conanpan/esp/esp-idf/components/json/cJSON -I/Users/conanpan/esp/esp-idf/components/driver/deprecated -I/Users/conanpan/esp/esp-idf/components/driver/i2c/include -I/Users/conanpan/esp/esp-idf/components/driver/touch_sensor/include -I/Users/conanpan/esp/esp-idf/components/driver/twai/include -I/Users/conanpan/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/Users/conanpan/esp/esp-idf/components/esp_pm/include -I/Users/conanpan/esp/esp-idf/components/esp_ringbuf/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_gpio/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_pcnt/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_gptimer/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_spi/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_mcpwm/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_i2s/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_sdmmc/include -I/Users/conanpan/esp/esp-idf/components/sdmmc/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_sdspi/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_sdio/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_dac/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_rmt/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_tsens/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_sdm/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_i2c/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_uart/include -I/Users/conanpan/esp/esp-idf/components/vfs/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_ledc/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_parlio/include -I/Users/conanpan/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/Users/conanpan/esp/esp-idf/components/mbedtls/port/include -I/Users/conanpan/esp/esp-idf/components/mbedtls/mbedtls/include -I/Users/conanpan/esp/esp-idf/components/mbedtls/mbedtls/library -I/Users/conanpan/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/Users/conanpan/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/Users/conanpan/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/Users/conanpan/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/conanpan/esp/hello_world=. -fmacro-prefix-map=/Users/conanpan/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -c /Users/conanpan/esp/hello_world/main/hello_world_main.c
/Users/conanpan/esp/hello_world/main/hello_world_main.c: In function 'fetch_current_prompt':
/Users/conanpan/esp/hello_world/main/hello_world_main.c:229:22: error: 'EXPECTED_JSON_SIZE' undeclared (first use in this function)
  229 |     size_t out_len = EXPECTED_JSON_SIZE;        // e.g. 256
      |                      ^~~~~~~~~~~~~~~~~~
/Users/conanpan/esp/hello_world/main/hello_world_main.c:229:22: note: each undeclared identifier is reported only once for each function it appears in
/Users/conanpan/esp/hello_world/main/hello_world_main.c:231:13: error: implicit declaration of function 'esp_zlib_decompress' [-Wimplicit-function-declaration]
  231 |     int r = esp_zlib_decompress(buf, len, out, &out_len);
      |             ^~~~~~~~~~~~~~~~~~~
/Users/conanpan/esp/hello_world/main/hello_world_main.c:232:14: error: 'Z_OK' undeclared (first use in this function); did you mean 'F_OK'?
  232 |     if (r != Z_OK) { /* handle error */ }
      |              ^~~~
      |              F_OK
/Users/conanpan/esp/hello_world/main/hello_world_main.c: At top level:
/Users/conanpan/esp/hello_world/main/hello_world_main.c:175:13: warning: 'detect_answer_button' defined but not used [-Wunused-function]
  175 | static char detect_answer_button(void)
      |             ^~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
